[package]
name = "jupyter-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reqwest = { version = "0.11", default_features = false, features = ["json","rustls-tls"] }
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
