[package]
name = "jupyter-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.11", default_features = false, features = ["json","rustls-tls"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.18" ,features = ["macros"]}
tokio-tungstenite = {version = "0.17", features = ["connect","native-tls-vendored"]}
url = "2.2"
uuid = { version = "1.0" ,features = ["v4"]}


[dev-dependencies]
tokio = {version = "1.18" , features = ["full"] }

